<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/day_card"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/mserif_book"
        android:padding="2dp"
        android:text="@string/dummy_day"
        android:textColor="@color/darker_brown"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/time_card"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/day_card"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="2dp"
        android:paddingEnd="0dp"
        android:text="@string/dummy_time"
        android:textColor="@color/darker_brown"
        android:textSize="14sp" />

    <View
        android:id="@+id/view"
        android:layout_width="3dp"
        android:layout_height="45dp"
        android:layout_alignTop="@id/day_card"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/time_card"
        android:background="@color/darker_brown" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@id/day_card"
        android:background="@drawable/chores_background"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/date_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mserif_bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/dummy_date"
            android:textColor="@color/darker_brown"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/title_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mserif_book"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/title"
            android:textColor="@color/darker_brown"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mserif_bookitalic"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/description"
            android:textColor="@color/darker_brown"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expandable_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_delete"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/delete"
            android:textColor="@color/darker_brown"
            android:textSize="12sp"
            tools:ignore="KeyboardInaccessibleWidget,UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_update"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/update"
            android:textColor="@color/darker_brown"
            android:textSize="12sp"
            tools:ignore="KeyboardInaccessibleWidget,UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/done"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_done"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/done"
            android:textAlignment="center"
            android:textColor="@color/darker_brown"
            android:textSize="12sp"
            tools:ignore="KeyboardInaccessibleWidget,UseCompatTextViewDrawableXml" />
    </LinearLayout>
</RelativeLayout>