<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".HomeScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/toolbar_background"
        android:elevation="2dp"
        android:minHeight="48dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:maxButtonHeight="48dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/CustomToolBar"
        app:titleTextColor="@color/darker_brown">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/ic_search"
            android:drawableTint="@color/brown_tint"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:textColor="@color/darker_brown"
            android:textColorHint="@color/brown_tint"
            android:textSize="16sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="8dp"
        android:text="@string/heading"
        android:textAllCaps="true"
        android:textColor="@color/dark_brown"
        android:textSize="11sp"
        tools:ignore="SmallSp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/head"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/empty_anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fab_add"
        android:layout_below="@id/head"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/empty_state" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/dummy"
        app:ensureMinTouchTargetSize="true"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/ic_add" />

</RelativeLayout>